# buspirate_thermocouple_max31855

./: LICENSE  pyproject.toml  requirements.txt
src/buspirate_thermocouple_max31855/: __init__.py
