[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "buspirate_thermocouple_max31855"
description = "A short description of your project"
authors = [
    {name="Your Name", email="your.email@example.com"}
]
dependencies = ["pexpect-serial == 0.1.0"]
dynamic = ["version"]

[tool.setuptools_scm]
